Fixed #5383 "TextField content alignment problem with Runo and FF"
svn changeset:18910/svn branch:6.6

--- a/WebContent/VAADIN/themes/runo/textfield/textfield.css
+++ b/WebContent/VAADIN/themes/runo/textfield/textfield.css
@@ -13,11 +13,10 @@ input[type=text].v-textfield,
 textarea.v-textarea {
 	font-size: 12px;
 	height: 16px;
-	padding: 4px 2px 0;
+	padding: 2px;
 }
 textarea.v-textarea {
 	height: auto;
-	padding-bottom: 2px;
 }
 .v-textfield-focus,
 .v-textarea-focus {
